--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,184 @@
 header {
+  display: flex;
   padding: 1rem;
   box-sizing: border-box;
+  /* flex-direction: column; */
+  justify-content: center;
+}
+
+header nav a:hover {
+  background: hsla(141, 53%, 53%, 0.486) !important;
+  border-radius: 0.25rem;
+  color: hsl(141, 65%, 21%) !important;
+}
+
+header nav button {
+  position: absolute;
+  /* top: 0.48rem;
+  right: -.45rem; */
+  background-color: hsl(125, 40%, 47%) !important;
+  color: #fff !important;
+  border: none !important;
+  padding: 1.6rem !important;
+}
+
+header nav button:hover {
+  background: hsl(125, 42%, 36%) !important;
+}
+
+main {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body,
+html {
+  height: 100%;
+  padding: 0;
+  margin: 0;
+  font-family: sans-serif;
+  color: #333;
+}
+
+a {
+  text-decoration: none;
+  font-weight: bold;
+  color: black;
+}
+
+a:hover {
+  color: #3486eb;
+}
+
+button {
+  border: 0;
+  padding: 1%;
+  font-weight: bold;
+  transition: background-color 0.1s;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.post-list {
+  margin: 0;
+  padding: 0;
+}
+
+textarea,
+input {
+  padding: 0.5%;
+  border-radius: 5px;
+  border: 1px solid #ccc;
+}
+
+textarea:focus,
+input:focus {
+  outline: none;
+  border: 1px solid #3486eb;
+}
+
+textarea {
+  min-width: 40%;
+  min-height: 100px;
+}
+
+form > div {
+  margin-bottom: 2%;
+}
+
+form label {
+  display: block;
+}
+
+.wrapper {
+  width: 100%;
+  min-height: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+}
+
+header {
+  border-bottom: 1px solid #ccc;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 1%;
+}
+
+
+.btn-no-style {
+  background: none;
+  border: none;
+  padding: 0;
+  cursor: pointer;
+  text-decoration: none;
+  color: #225ca3;
+  font-size: 100%;
+  font-weight: bold;
+  transition: color 0.1s;
+  margin-left: 16px;
+}
+
+.post {
+  margin-bottom: 2%;
+  line-height: 150%;
+}
+
+.post .title span {
+  font-style: italic;
+  font-size: 90%;
+  color: #7d7d7d;
+}
+
+.edit-link {
+  display: block;
+  margin: -1.5% 0 2% 0;
+}
+
+.comment-form {
+  margin-bottom: 5%;
+}
+
+.comment {
+  padding: 1%;
+  margin-bottom: 1%;
+  
+}
+
+.comment:nth-child(odd) {
+  background-color: #edffeb;
+}
+
+.comment .meta {
+  font-size: 90%;
+  margin-bottom: 0.5%;
+  opacity: 0.6;
+}
+
+.edit-post-form {
+  margin-bottom: 5%;
+}
+
+footer {
+  border-top: 1px solid #ccc;
+  display: flex;
+  justify-content: center;
+  padding: 1%;
+  font-size: 110%;
+}
+
+.card {
+  margin-bottom: 1em;
+  margin-top: 1em;
+}
+
+.rows {
+  display: flex;
+  flex-direction: column;
 }
