--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -21,8 +21,8 @@
             <a href="/dashboard/create/" class="navbar-item is-hoverable pt-1 mr-4">create post</a>
             <button id="logout" class="button is-danger">logout</button>
             {{else}}
-            <a href="/" class="navbar-item is-hoverable pt-1">homepage</a>
-            <a href="/login" class="button is-primary">login</a>
+            <a href="/" class="navbar-item is-hoverable">homepage</a>
+            <a href="/login" class="button is-success">login</a>
             {{/if}}
         </nav>
     </header>
