--- a/views/single-post.handlebars
+++ b/views/single-post.handlebars
@@ -10,7 +10,7 @@
   </div>
 
   <div>
-    <button class="button is-warning ml-5 mb-5" type="submit">add comment</button>
+    <button class="button is-success ml-5 mb-5" type="submit">add comment</button>
   </div>
   
 </form>
@@ -19,5 +19,5 @@
 {{> comments post.comments}}
 
 {{#if loggedIn}}
-<script src="/javascript/comment.js"></script>
+<script src="/public/javascript/comment.js"></script>
 {{/if}}
